# LinoFinance

./: .gitignore  CLAUDE.md  LinoFinance前端设计方向.md  LinoFinance前置计划.md  Makefile  PROJECT_PLAN.md  README.md  REVIEW_REPORT_v1.2.0.md  docker-compose.yml  frontend_v1_visual_upgrade_plan.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: audit_credit_liability.py  backup_postgres.py  fetch_exchange_rates.py  production_migrate.py  restore_postgres.py  run_local_sqlite.py  run_scheduled_jobs.py
backend/tests/: conftest.py  test_ai_idempotency_p1.py  test_apple_identity.py  test_auth_endpoints.py  test_cash_flow_phase3.py  test_cash_flow_update.py  test_credit_cycle_actions_p1.py  test_credit_liability_migration_p1.py  test_credit_liability_p1.py  test_credit_phase2.py  test_dashboard_reimbursement_receivable_v2_5_0.py  test_dashboard_v1_1_6.py  test_entries_list_p2.py  test_entries_phase1.py  test_entry_edit_p5.py  test_exchange_rate_auto_p6.py  test_foundation_routes.py  test_health.py  test_investment.py  test_master_data_p6.py  test_phase5_installments_subscriptions.py  test_phase6_ai_notifications.py  test_phase7_reports_exports.py  test_phase8_production_hardening.py  test_protection_export_p7.py  test_push_apns_jwt.py  test_reconciliation_check_p2.py  test_reimbursement_phase4.py  test_reimbursement_status_migration_p2.py  test_repayment_reminder_p8.py  test_timezone_phase4.py  test_users_and_sessions_model.py  test_v1_1_foundation.py  test_void_draft_migration_p1.py
(+356 files in other folders)
