[project]
name = "linofinance-backend"
version = "0.1.0"
description = "Cloud API backend for LinoFinance."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.9,<1",
    "pydantic-settings>=2.4,<3",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
